--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         }
 
         // OpenAQ API configuration - requires API key for v3
-        const OPENAQ_API_KEY = null; // Set your API key here: "YOUR-OPENAQ-API-KEY"
+        const OPENAQ_API_KEY = "e43a81a8bc684ff151297a85a886fa0135690ee07d8392ef201baca1f2f97de3"; // Set your API key here: "YOUR-OPENAQ-API-KEY"
         
         // Fetch nearest PM2.5 using OpenAQ
         async function fetchAQI(lat, lon) {
