--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                 </div>
                 <div class="header-buttons">
                     <button class="icon-btn" id="location-btn">
-                        📍
-                        <div class="tooltip">Analyze My Location</div>
+                        🎯
+                        <div class="tooltip">Show Current Location</div>
                     </button>
                     <button class="icon-btn" id="help-btn">
                         ❓
