--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
         
         .sidebar-toggle-btn {
-            position: fixed; bottom: calc(130px + env(safe-area-inset-bottom, 0)); right: 15px; z-index: 999;
+            position: fixed; top: 20px; right: 20px; z-index: 999;
             width: 48px; height: 48px; border-radius: 50%; border: none;
             background: #2196F3; color: white; font-size: 18px;
             box-shadow: 0 3px 10px rgba(0,0,0,0.25); cursor: pointer;
