--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         
         .score-display h2 {
             font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
-            font-weight: 600; letter-spacing: 0.5px;
+            font-weight: 600; letter-spacing: 0.5px; margin-bottom: 15px;
         }
         
         .category-header {
