--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
                                 </div>
                                 <div class="metric-card" style="padding: 8px; min-height: auto;">
                                     <div class="metric-tooltip">Economic prosperity indicator based on business infrastructure - Higher values suggest better job opportunities and services. Important for long-term community sustainability and reduced inequality.</div>
-                                    <div class="metric-title">💰 Economic Level: ${scores.economicLevel || '--'}</div>
+                                    <div class="metric-title">💰 Economic Level: ${scores.economicLevel || '--'}/100</div>
                                     <div class="metric-subtitle">Income proxy score</div>
                                 </div>
                             </div>
@@ -1153,7 +1153,7 @@
                                 </div>
                                 <div class="metric-card" style="padding: 8px; min-height: auto;">
                                     <div class="metric-tooltip">Employment opportunities score - Based on offices, commercial, and industrial areas. Higher scores indicate better job market and economic sustainability for residents.</div>
-                                    <div class="metric-title">💼 Employment: ${scores.employmentOpportunity || '--'}</div>
+                                    <div class="metric-title">💼 Employment: ${scores.employmentOpportunity || '--'}/100</div>
                                     <div class="metric-subtitle">Job market score</div>
                                 </div>
                             </div>
